[project]
name = "draugrui"
version = "1.0"
description = "User Interface for Draugr invocations on FGCZ cluster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bfabric>=1.13.36",
    "blinker>=1.9.0",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-core-components>=2.0.0",
    "dash-daq>=0.6.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "flask>=3.1.2",
    "idna>=3.11",
    "importlib-metadata>=8.7.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "nest-asyncio>=1.6.0",
    "packaging>=25.0",
    "plotly>=6.3.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "retrying>=1.4.2",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "slugify>=0.0.1",
    "suds-py3>=1.4.5.0",
    "tenacity>=9.1.2",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "zipp>=3.23.0",
]
