[project]
name = "draugrui"
version = "2.1.0"
description = "User Interface for Draugr invocations on FGCZ cluster"
authors = [
    { name = "Falko Noe", email = "falko.noe@fgcz.uzh.ch" },
    { name = "Arion Förtsch", email = "arion.foertsch@fgcz.uzh.ch" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bfabric-web-apps",
]

[tool.uv.sources]
bfabric-web-apps = { git = "https://gitlab.bfabric.org/bfabricpublic/bfabricwebapps/bfabric-web-apps" }
